wui fix footer not fixed because of scrollbars

--- a/wui/static/css/main.css
+++ b/wui/static/css/main.css
@@ -271,7 +271,8 @@ svg {
     }
 }
 
-.sidenav {
+.sidenav,
+.sidenav > div {
     display: flex;
     flex-direction: column;
 }
